css/styles.css
@font-face {
    font-family:                Lekton;
    src:                        url( '../fonts/Lekton/Lekton-Regular.ttf' );
}

@font-face {
    font-family:                Lekton;
    font-style:                 italic;
    src:                        url( '../fonts/Lekton/Lekton-Italic.ttf' );
}

@font-face {
    font-family:                Lekton;
    font-weight:                bold;
    src:                        url( '../fonts/Lekton/Lekton-Bold.ttf' );
}

body {
    background:                 #EFEFEF url( ../img/bg.png ) repeat top left;
    font-family:                Lekton, Helvetica, Arial, sans-serif;
    color:                      #365aba;
    margin:                     0px 0px 0px 0px;
    padding:                    0px 0px 0px 20px;
}

.win body {
    font-family:                Arial, sans-serif;
}

body.large  { font-size:         16px; }
body.medium { font-size:         14px; }
body.small  { font-size:         12px; }

a {
    color:                      #365aba;
    text-decoration:            none;
}

a:hover {
    color:                      #365aba;
}

#getstarted {
    display:                    none;
    text-shadow:                0px 1px 0px #FFF;
    width:                      50%;
    font-size:                  1.1em;
    margin:                     5em auto;
}

#getstarted > h1 {
    color:                      #666;
    margin-bottom:              5px;
    margin-left:                10px;
}

#getstarted a {
    font-weight:                bold;
}

#getstarted a:hover {
    color:                      #666;
}

#getstarted > section {
    display:                    block;
    text-decoration:            none;
    font-size:                  0.9em;
    font-weight:                normal;
    letter-spacing:             0.1em;
    line-height:                1.4;
    background-color:           #FFFFFF;
    border-radius:              6px 6px 6px 6px;
    box-shadow:                 0 1px 3px #CCCCCC;
    padding:                    10px;
    margin:                     2px 6px 6px 2px;
}

#getstarted p {
    margin-top:                 0px;
}

#bookmarks > div {
    width:                      48%;
    margin:                     0px 0px 30px 0px;
    padding:                    0;
}

#bookmarks > .left {            float: left; }
#bookmarks > .right {           float: right; }

#bookmarks section {
    clear:                      both;
    padding:                    8px 0px 0px 0px;
    height:                     auto;
    overflow:                   hidden;
}

#bookmarks h1 {
    font-size:                  0.9em;
    color:                      #666666;
    font-weight:                bold;
}

#bookmarks a {
    position:                   relative;
    display:                    block;
    text-decoration:            none;
    font-size:                  0.9em;
    font-weight:                normal;
    letter-spacing:             0.1em;
    line-height:                1.4;
    float:                      left;
    background-color:           #FFFFFF;
    border-radius:              6px 6px 6px 6px;
    box-shadow:                 0 1px 3px #CCCCCC;
    width:                      9.5em;
    height:                     4em;
    padding:                    10px 5px 5px 7px;
    margin:                     2px 6px 6px 2px;
    overflow:                   hidden;
    text-overflow:              ellipsis;
    position:                   relative;
}

#bookmarks a:hover {
    background-color:           #b6c5ef;
}

.edit #bookmarks a:hover {
    background-color:           #FFDBA9;
}

#bookmarks a > img {
    margin-right:               0px;
    margin-bottom:              -3px;
    width:                      1.15em;
}

#bookmarks a.removed {
    opacity: 0;
    -webkit-transition: opacity 0.5s;
}

#bookmarks a.add {
    opacity:                    0.7;
    background-color:           #F1F1F1;
    display:                    -webkit-box;
    -webkit-box-orient:         vertical;
    -webkit-box-pack:           center;
    -webkit-box-align:          center;
    color:                      #CDCDCD;
    width:                      2.13em;
    height:                     0.9em;
    line-height:                0.9;
    font-size:                  4em;
    font-weight:                bold;
    text-shadow:                0px 1px #FFF;
    display:                    none;
}

.edit #bookmarks a.add {
    display:                    -webkit-box;
}

#bookmarks a.add:hover {
    opacity:                    1;
    background-color:           #DDD;
    color:                      #AAA;
}

#bookmarks a.add img {
    display:                    none;
}

#controls {
    position:                   absolute;
    top:                        5px;
    right:                      10px;
}

#controls > div {
    display: inline;
}

#controls a {
    font-size:                  14px;
}

#controls a:hover, #controls a.selected {
    text-decoration:            underline;
}

:-webkit-any(.ui-edit-form,.ui-add-form) > input {
    clear: both;
    width: 95%;
    padding: 5px 5px;
    border: 1px solid #B2B2B2;
    box-shadow: 1px 1px 2px #CCC;
    margin-top: 10px;
    border-radius: 3px;
}

:-webkit-any(.ui-edit-form,.ui-add-form) > input:focus {
    outline: none;
    border-color: #b6c5ef;
}

.ui-edit-form > a.remove {
    color: #96101A;
    display: inline-block;
    margin-top: 25px;
    font: -webkit-small-control;
}

.ui-edit-form > a.remove:hover {
    text-decoration: underline;
}

/* Override UKit styles */

#dialog h1 {
    font: -webkit-small-control;
}

#notifications {
    top: auto !important;
    bottom: 10px;
}

